--- a/src/main/scala/DBcon/application.conf
+++ b/src/main/scala/DBcon/application.conf
@@ -1,8 +1,12 @@
 postgre = {
-  url = "jdbc:postgresql://geco:geco78@localhost/geco-test"
+  url = "jdbc:postgresql://131.175.120.18/geco-test"
   driver = org.postgresql.Driver
   connectionPool = disabled
   keepAliveConnection = true
+  properties = {
+    user = "geco"
+    password = "geco78"
+  }
 }
 
 //#h2mem1
@@ -41,7 +45,7 @@ databaseUrl {
   dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
   properties = {
     driver = "org.postgresql.Driver"
-    url = "postgres://user:pass@host/dbname"
+    url = "postgres://geco:geco78@131.175.120.18/geco-test"
   }
 }
 //#dburl
@@ -51,7 +55,7 @@ altDatabaseUrl {
   dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
   properties = {
     driver = "org.postgresql.Driver"
-    url = "postgresql://geco:geco78@localhost/geco-test/svr"
+    url = "postgresql://geco:geco78@localhost/geco-test"
   }
 }
 //#altdburl
